Fixed wrong width in overlayered-container

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,6 +40,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 40fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    @extend %fullSpace;
 }
 
 .container {
